; ModuleID = '/home/carl/AnghaBench/linux/drivers/ptp/extr_ptp_qoriq.c_tmr_cnt_read.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/ptp/extr_ptp_qoriq.c_tmr_cnt_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ptp_qoriq = type { i32 (i32*)*, %struct.ptp_qoriq_registers }
%struct.ptp_qoriq_registers = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ptp_qoriq*)* @tmr_cnt_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tmr_cnt_read(%struct.ptp_qoriq* %0) #0 {
  %2 = alloca %struct.ptp_qoriq*, align 8
  %3 = alloca %struct.ptp_qoriq_registers*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.ptp_qoriq* %0, %struct.ptp_qoriq** %2, align 8
  %7 = load %struct.ptp_qoriq*, %struct.ptp_qoriq** %2, align 8
  %8 = getelementptr inbounds %struct.ptp_qoriq, %struct.ptp_qoriq* %7, i32 0, i32 1
  store %struct.ptp_qoriq_registers* %8, %struct.ptp_qoriq_registers** %3, align 8
  %9 = load %struct.ptp_qoriq*, %struct.ptp_qoriq** %2, align 8
  %10 = getelementptr inbounds %struct.ptp_qoriq, %struct.ptp_qoriq* %9, i32 0, i32 0
  %11 = load i32 (i32*)*, i32 (i32*)** %10, align 8
  %12 = load %struct.ptp_qoriq_registers*, %struct.ptp_qoriq_registers** %3, align 8
  %13 = getelementptr inbounds %struct.ptp_qoriq_registers, %struct.ptp_qoriq_registers* %12, i32 0, i32 0
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 1
  %16 = call i32 %11(i32* %15)
  store i32 %16, i32* %5, align 4
  %17 = load %struct.ptp_qoriq*, %struct.ptp_qoriq** %2, align 8
  %18 = getelementptr inbounds %struct.ptp_qoriq, %struct.ptp_qoriq* %17, i32 0, i32 0
  %19 = load i32 (i32*)*, i32 (i32*)** %18, align 8
  %20 = load %struct.ptp_qoriq_registers*, %struct.ptp_qoriq_registers** %3, align 8
  %21 = getelementptr inbounds %struct.ptp_qoriq_registers, %struct.ptp_qoriq_registers* %20, i32 0, i32 0
  %22 = load %struct.TYPE_2__*, %struct.TYPE_2__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 0
  %24 = call i32 %19(i32* %23)
  store i32 %24, i32* %6, align 4
  %25 = load i32, i32* %6, align 4
  %26 = shl i32 %25, 32
  store i32 %26, i32* %4, align 4
  %27 = load i32, i32* %5, align 4
  %28 = load i32, i32* %4, align 4
  %29 = or i32 %28, %27
  store i32 %29, i32* %4, align 4
  %30 = load i32, i32* %4, align 4
  ret i32 %30
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
